react-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
        - name: react-app
          image: duyphuoc/cc-management:react-staging-f4c3b84
          imagePullPolicy: Always
          ports:
          - containerPort: 80
          volumeMounts:
            - name: nginx-config-volume
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: nginx.conf
              readOnly: true
      volumes:
        - name: nginx-config-volume
          configMap:
            name: nginx-config
           
---
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  # type: LoadBalancer

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: react-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: react-app-virtual-service
spec:
  hosts:
  - "*"
  gateways:
  - react-app-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: react-app-service
        port:
          number: 80  
  - match:
    - uri:
        prefix: /auth/
    route:
    - destination:
        host: auth-service
        port:
          number: 80
